--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1>Sabor da Paraíba</h1>
-            <div class="container">
+            <div>
                 <nav>
                     <ul>
                         <li><a href="./index.html" target="_blank">Página Inicial</a></li>
